--- a/data/panel/panel.css
+++ b/data/panel/panel.css
@@ -1,5 +1,5 @@
 #dictionary-content {
-    padding: 10px 10px 10px 10px;
+    padding: 10px;
 }
 
 ul.megaslownik {
@@ -9,17 +9,16 @@ ul.megaslownik {
 }
 
 .megaslownik .definicja {
-    margin-bottom: 5px;
-    border: 1px dashed #EEE;
+    border: 1px dashed #DDD;
     border-radius: 4px;
     padding: 2px;
+    margin-bottom: 5px;
 }
 
 .megaslownik .definition {
     font-weight: bold;
     color: #444;
     margin-right: 15px;
-    margin-bottom: 2px;
     display: inline-block;
 }
 
@@ -35,6 +34,7 @@ ul.megaslownik {
     background-color: #dfeedf;
     padding: 3px 5px;
     border-radius: 3px;
+    margin-top: 3px;
 }
 
 .megaslownik .definicja .zobaczrowniez {
