--- a/data/panel/panel.css
+++ b/data/panel/panel.css
@@ -7,24 +7,47 @@ ul.megaslownik {
     margin: 0;
     list-style: none;
 }
+.megaslownik .znaczenie {
+    border: 1px solid #DDD;
+    border-radius: 5px;
+    margin-bottom: 3px;
+    padding: 2px 7px;
+}
+
+.megaslownik .znaczenie h3 {
+    cursor: pointer;
+    color: #444;
+    margin-left: 3px;
+}
+.megaslownik .znaczenie h3:hover {
+    color: #333;
+}
+.megaslownik .znaczenie h3.disabled {
+    color: #aaa;
+}
 
 .megaslownik .definicja {
     border: 1px dashed #DDD;
     border-radius: 4px;
     padding: 2px;
     margin-bottom: 5px;
+    background-color: #FFF;
 }
 
 .megaslownik .definition {
     font-weight: bold;
     color: #444;
-    margin-right: 15px;
+    margin-right: 12px;
+    margin-left: 3px;
     display: inline-block;
 }
 
 .megaslownik .definicja .right {
     float: right;
     color: #FFF;
+    display: inline-block;
+    padding-left: 5px;
+    padding-bottom: 3px;
 }
 
 .megaslownik .definicja .example {
